# ponix-rs

./: .gitignore  .mise.toml  .releaserc.json  CHANGELOG.md  CLAUDE.md  Cargo.toml  INTEGRATION_TEST_FINDINGS.md  README.md  ROADMAP.md  Tiltfile  explore_org_proto.rs  test_org_proto.rs
crates/analytics_worker/: Cargo.toml
crates/analytics_worker/src/: analytics_worker.rs  clickhouse.rs  domain.rs  lib.rs  nats.rs
crates/analytics_worker/src/clickhouse/: envelope_repository.rs  inserter_repository.rs  mod.rs
crates/analytics_worker/src/domain/: cayenne_lpp.rs  cel.rs  cel_compiler.rs  cel_converter.rs  mod.rs  payload_converter.rs  payload_decoder.rs  processed_envelope_service.rs  raw_envelope_service.rs
crates/analytics_worker/src/nats/: mod.rs  processed_envelope_processor.rs  processed_envelope_producer.rs  processed_envelope_service.rs  raw_envelope_processor.rs  raw_envelope_service.rs
crates/analytics_worker/tests/: clickhouse_integration.rs  envelope_integration_test.rs  polyline_reference_tests.rs
crates/cdc_worker/: Cargo.toml
crates/cdc_worker/src/: cdc_worker.rs  domain.rs  lib.rs  nats.rs
crates/cdc_worker/src/domain/: cdc_config.rs  cdc_converter.rs  data_stream_converter.rs  data_stream_definition_converter.rs  device_converter.rs  document_converter.rs  end_device_converter.rs  end_device_definition_converter.rs  entity_config.rs  gateway_converter.rs  mod.rs  organization_converter.rs  process.rs  user_converter.rs  workspace_converter.rs
crates/cdc_worker/src/nats/: nats_sink.rs
crates/cdc_worker/tests/: gateway_cdc_integration.rs
crates/collaboration_server/: Cargo.toml
crates/collaboration_server/src/: collaboration_server.rs  document_snapshotter.rs  domain.rs  lib.rs  nats.rs  websocket.rs
crates/collaboration_server/src/domain/: active_document.rs  awareness.rs  compaction_worker.rs  connected_user.rs  content_extractor.rs  document_awareness.rs  document_room.rs  protocol.rs  relay_trait.rs  room_manager.rs  snapshotter_service.rs
crates/collaboration_server/src/nats/: awareness_relay.rs  document_update_consumer.rs  document_update_service.rs  nats_relay.rs
crates/collaboration_server/src/websocket/: auth.rs  connection.rs  handler.rs
crates/collaboration_server/tests/: websocket_integration.rs
crates/common/: Cargo.toml
crates/common/src/: auth.rs  cel.rs  clickhouse.rs  domain.rs  garde.rs  grpc.rs  jsonschema.rs  lib.rs  nats.rs  postgres.rs  proto.rs  telemetry.rs  validation.rs  yrs.rs
crates/common/src/auth/: authorization_service.rs  casbin_authorization_service.rs  config.rs  context.rs  jwt.rs  login.rs  password.rs  rbac_model.rs  (+3 more)
crates/common/tests/: authorization_integration.rs  data_stream_repository_integration.rs  document_association_repository_integration.rs  document_repository_integration.rs  end_device_repository_integration.rs  gateway_repository_integration.rs  nats_stream_integration.rs  organization_repository_integration.rs
crates/gateway_orchestrator/: Cargo.toml
crates/gateway_orchestrator/src/: domain.rs  gateway_orchestrator.rs  lib.rs  mqtt.rs  nats.rs
crates/gateway_orchestrator/tests/: gateway_orchestrator_test.rs
crates/ponix-all-in-one/: Cargo.toml  Dockerfile
crates/ponix-all-in-one/src/: analytics_ingester.rs  cdc_worker.rs  config.rs  gateway_api.rs  lib.rs  main.rs  ponix_api.rs
crates/ponix-all-in-one/tests/: e2e_pipeline_test.rs
crates/ponix-clickhouse/: Cargo.toml
crates/ponix-clickhouse/migrations/: 20251104110101_add_organization_id.sql
crates/ponix-clickhouse/src/: config.rs  conversions.rs  envelope_repository.rs  envelope_store.rs  lib.rs  migration.rs  models.rs
crates/ponix-clickhouse/tests/: integration.rs
crates/ponix-domain/: Cargo.toml
crates/ponix-domain/src/: end_device.rs  end_device_service.rs  envelope.rs  envelope_service.rs  error.rs  gateway.rs  gateway_cdc_event.rs  gateway_config.rs  gateway_orchestrator.rs  gateway_orchestrator_config.rs  gateway_process.rs  gateway_process_store.rs  gateway_service.rs  in_memory_gateway_process_store.rs  lib.rs  organization.rs  organization_service.rs  payload_converter.rs  processed_envelope_service.rs  raw_envelope_service.rs  repository.rs  types.rs
crates/ponix-domain/tests/: envelope_integration_test.rs  gateway_orchestrator_test.rs
crates/ponix-grpc/: Cargo.toml
crates/ponix-grpc/src/: conversions.rs  device_handler.rs  error.rs  gateway_conversions.rs  gateway_handler.rs  lib.rs  organization_conversions.rs  organization_handler.rs  server.rs
crates/ponix-nats/: Cargo.toml  README.md
crates/ponix-nats/src/: client.rs  consumer.rs  conversions.rs  demo_producer.rs  gateway_cdc_consumer.rs  gateway_cdc_converter.rs  lib.rs  processed_envelope_processor.rs  processed_envelope_producer.rs  protobuf.rs  raw_envelope_conversions.rs  raw_envelope_demo_producer.rs  raw_envelope_processor.rs  raw_envelope_producer.rs  traits.rs
crates/ponix-payload/: Cargo.toml
crates/ponix-payload/src/: cayenne_lpp.rs  cel.rs  cel_converter.rs  error.rs  lib.rs
crates/ponix-payload/tests/: polyline_reference_tests.rs
crates/ponix-postgres/: Cargo.toml
crates/ponix-postgres/migrations/: 20251116000000_create_devices_table.sql  20251121000000_add_payload_conversion_to_devices.sql  20251123000001_add_organization_fk_to_devices.sql  20251124000000_create_cdc_publication.sql
crates/ponix-postgres/src/: conversions.rs  device_repo.rs  device_store.rs  gateway_repository.rs  lib.rs  models.rs  organization_repository.rs
crates/ponix-postgres/tests/: gateway_cdc_integration.rs  gateway_repository_integration.rs  gateway_repository_test.rs  integration.rs  organization_repository_integration.rs  repository_integration.rs
crates/ponix_all_in_one/: Cargo.toml  Dockerfile  README.md
crates/ponix_all_in_one/src/: config.rs  main.rs  telemetry.rs
crates/ponix_all_in_one/tests/: e2e_pipeline_test.rs
crates/ponix_api/: Cargo.toml
crates/ponix_api/src/: domain.rs  grpc.rs  lib.rs  ponix_api.rs
crates/runner/: Cargo.toml
crates/runner/examples/: basic_runner.rs
crates/runner/src/: lib.rs
(+229 files in other folders)
