[workspace]
members = [
    "crates/runner",
    "crates/ponix_all_in_one",
    "crates/goose",
    "crates/ponix_api",
    "crates/common",
    "crates/cdc_worker",
    "crates/analytics_worker",
    "crates/init_process",
    "crates/gateway_orchestrator",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Ponix Dev"]
license = "MIT"

[workspace.dependencies]
tokio = { version = "1.40", features = ["full"] }
tokio-util = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
anyhow = "1.0"
thiserror = "1.0"
prost = "0.13"
prost-types = "0.13"
xid = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
cel-interpreter = "0.10"
