[package]
name = "analytics_worker"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
common = { path = "../common" }
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
async-trait.workspace = true
chrono.workspace = true
prost.workspace = true
futures.workspace = true
async-nats.workspace = true
tower.workspace = true
clickhouse.workspace = true
cel-interpreter.workspace = true

ponix-proto-prost.workspace = true

[dev-dependencies]
common = { path = "../common", features = ["testing"] }
goose = { path = "../goose" }
mockall.workspace = true
testcontainers.workspace = true
testcontainers-modules.workspace = true

[features]
integration-tests = []
