[package]
name = "cdc_worker"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
common = { path = "../common" }
serde = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
async-trait = "0.1"
chrono = "0.4"
ponix-proto-prost = { package = "ponix_ponix_community_neoeinstein-prost", version = "0.4.0-20251121014924-bbe747bf8fab.1", registry = "buf" }
prost = { version = "0.13" }
futures = "0.3"
async-nats = "0.37"
etl = { git = "https://github.com/supabase/etl", branch = "main" }
etl-postgres = { git = "https://github.com/supabase/etl", branch = "main" }
serde_json = { workspace = true }
bytes = "1.9"
base64 = "0.22"
prost-types = { workspace = true }
opentelemetry = { workspace = true }
tracing-opentelemetry = { workspace = true }

[dev-dependencies]
common = { path = "../common", features = ["testing"] }
futures-util = "0.3"
testcontainers = "0.23"
testcontainers-modules = { version = "0.11", features = ["postgres"] }
tokio-postgres = { version = "0.7", features = [
    "with-chrono-0_4",
    "with-serde_json-1",
] }
tracing-subscriber = { workspace = true }
which = "7.0"
goose = { path = "../goose" }

[features]
integration-tests = []
