[package]
name = "cdc_worker"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
common = { path = "../common" }
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
async-trait.workspace = true
chrono.workspace = true
prost.workspace = true
prost-types.workspace = true
futures.workspace = true
async-nats.workspace = true
bytes.workspace = true
base64.workspace = true
tower.workspace = true
opentelemetry.workspace = true
tracing-opentelemetry.workspace = true
etl.workspace = true
etl-postgres.workspace = true

# Protobuf (BSR registry - excluded from workspace)
ponix-proto-prost = { package = "ponix_ponix_community_neoeinstein-prost", version = "0.4.0-20251129185957-8f22d4974be0.1", registry = "buf" }

[dev-dependencies]
common = { path = "../common", features = ["testing"] }
goose = { path = "../goose" }
futures-util.workspace = true
testcontainers.workspace = true
testcontainers-modules.workspace = true
tokio-postgres.workspace = true
tracing-subscriber.workspace = true
which.workspace = true

[features]
integration-tests = []
