[package]
name = "collaboration_server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
common = { path = "../common" }
ponix-runner = { path = "../runner" }
axum = { workspace = true, features = ["ws"] }
tokio = { workspace = true }
tokio-util = { workspace = true }
async-nats = { workspace = true }
async-trait = { workspace = true }
futures-util = { workspace = true }
yrs = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
bytes = { workspace = true }
uuid = { version = "1", features = ["v4"] }
chrono = { workspace = true }
tower-http = { workspace = true, features = ["cors"] }
thiserror = { workspace = true }
time = "0.3"
serde_json = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
common = { path = "../common", features = ["testing"] }
tokio-tungstenite = "0.28"
serde_json = { workspace = true }
async-trait = { workspace = true }
yrs = { workspace = true }

[features]
integration-tests = []
