[package]
name = "common"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
prost-types = { version = "0.13" }

chrono = "0.4"
anyhow = { workspace = true }
thiserror = { workspace = true }
async-trait = "0.1"
serde_json = { workspace = true }
mockall = { version = "0.13", optional = true }
async-nats = "0.37"
bytes = "1.0"
futures = "0.3"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
tracing = "0.1"
ponix-proto-prost = { package = "ponix_ponix_community_neoeinstein-prost", version = "0.4.0-20251129185957-8f22d4974be0.1", registry = "buf" }
prost = "0.13"
clickhouse = { version = "0.14", features = ["lz4", "inserter", "chrono"] }
serde = { workspace = true }
tonic = "0.12"
# PostgreSQL client
tokio-postgres = { version = "0.7", features = [
    "with-chrono-0_4",
    "with-serde_json-1",
] }
# Connection pooling
deadpool-postgres = "0.14"

# OpenTelemetry for trace context propagation and telemetry
opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
opentelemetry-otlp.workspace = true
opentelemetry-semantic-conventions.workspace = true
tracing-opentelemetry.workspace = true
opentelemetry-appender-tracing.workspace = true
tracing-subscriber = { workspace = true }

# Tower for middleware
tower = { workspace = true }
http = "1.0"

[dev-dependencies]
mockall = "0.13"
testcontainers = "0.23"
testcontainers-modules = { version = "0.11", features = ["postgres"] }
goose = { path = "../goose" }
which = "7.0"

[features]
testing = ["mockall"]
integration-tests = []
