[package]
name = "common"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
prost-types.workspace = true
prost.workspace = true
chrono.workspace = true
anyhow.workspace = true
thiserror.workspace = true
async-trait.workspace = true
serde_json.workspace = true
serde.workspace = true
async-nats.workspace = true
bytes.workspace = true
futures.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
tonic.workspace = true
tonic-reflection.workspace = true
tonic-web.workspace = true
tower.workspace = true
tower-http.workspace = true
http.workspace = true
protoc-wkt.workspace = true
clickhouse.workspace = true
tokio-postgres.workspace = true
deadpool-postgres.workspace = true

# Authentication
argon2.workspace = true
jsonwebtoken.workspace = true
rand.workspace = true
base64.workspace = true
sha2.workspace = true
hex.workspace = true

# OpenTelemetry for trace context propagation and telemetry
opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
opentelemetry-otlp.workspace = true
opentelemetry-semantic-conventions.workspace = true
tracing-opentelemetry.workspace = true
opentelemetry-appender-tracing.workspace = true
tracing-subscriber.workspace = true

# Optional
mockall = { workspace = true, optional = true }

ponix-proto-prost.workspace = true

# Authorization
casbin = { workspace = true }

[dependencies.tokio-postgres-adapter]
git = "https://github.com/ponix-dev/casbin-tokio-postgres-adapter.git"

[dev-dependencies]
mockall.workspace = true
testcontainers.workspace = true
testcontainers-modules.workspace = true
which.workspace = true
goose = { path = "../goose" }

[features]
testing = ["mockall"]
integration-tests = []
