[package]
name = "gateway_orchestrator"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
common = { path = "../common" }
serde.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
async-trait.workspace = true
chrono.workspace = true
anyhow.workspace = true
futures.workspace = true
prost.workspace = true
async-nats.workspace = true
bytes.workspace = true
tower.workspace = true
rumqttc.workspace = true

ponix-proto-prost.workspace = true

[dev-dependencies]
common = { path = "../common", features = ["testing"] }

[features]
integration-tests = []
