[package]
name = "ponix-all-in-one"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "ponix-all-in-one"
path = "src/main.rs"

[dependencies]
ponix-runner = { path = "../runner" }
ponix-nats = { path = "../ponix-nats", features = ["processed-envelope"] }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
config = { version = "0.14", features = ["toml"] }

# Protobuf support
ponix-proto = { package = "ponix_ponix_community_neoeinstein-prost", version = "0.4.0-20251105022230-76aad410c133.1", registry = "buf" }
prost-types = { workspace = true }
xid = { workspace = true }
