[package]
name = "ponix-clickhouse"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[features]
# Feature flag for integration tests that require external dependencies (ClickHouse container)
integration-tests = []

[dependencies]
# ClickHouse client with all necessary features
clickhouse = { version = "0.14", features = ["lz4", "inserter", "chrono"] }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# CRITICAL: Use chrono with serde feature for DateTime serde attributes
chrono = { version = "0.4", features = ["serde"] }

# Protobuf dependencies for ProcessedEnvelope
ponix-proto = { package = "ponix_ponix_community_neoeinstein-prost", version = "0.4.0-20251105022230-76aad410c133.1", registry = "buf" }
prost-types = { workspace = true }

[dev-dependencies]
testcontainers = "0.23"
testcontainers-modules = { version = "0.11", features = ["clickhouse"] }
tokio-test = "0.4"
which = "7.0"
