[package]
name = "ponix-domain"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
async-trait = "0.1"


chrono = "0.4"
tracing = { workspace = true }
xid = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
mockall = "0.13"
tokio = { workspace = true }
