[package]
name = "ponix-grpc"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[features]
default = ["device"]
device = ["ponix-proto-prost", "ponix-proto-tonic"]  # Feature flag for device service

[dependencies]
tokio = { workspace = true }
tokio-util = { workspace = true }
tonic = "0.12"
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = "0.1"

# Domain layer
ponix-domain = { path = "../ponix-domain" }

# Protobuf types (prost)
ponix-proto-prost = { package = "ponix_ponix_community_neoeinstein-prost", version = "0.4.0-20251117015401-3959dbe7333f.1", registry = "buf", optional = true }

# Protobuf service definitions (tonic)
ponix-proto-tonic = { package = "ponix_ponix_community_neoeinstein-tonic", version = "0.4.1-20251117015401-3959dbe7333f.1", registry = "buf", optional = true }

prost-types = { workspace = true }
chrono = "0.4"

[dev-dependencies]
tokio-test = "0.4"
