[package]
name = "ponix-nats"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
async-nats = "0.37"
async-trait = "0.1"
bytes = "1.0"
futures = "0.3"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
tracing = "0.1"

# Protobuf support (optional)
prost = { version = "0.13", optional = true }
prost-types = { version = "0.13", optional = true }
serde_json = { version = "1.0", optional = true }
chrono = { version = "0.4", optional = true }

# ProcessedEnvelope-specific dependencies (optional)
ponix-proto = { package = "ponix_ponix_community_neoeinstein-prost", version = "0.4.0-20251121014924-bbe747bf8fab.1", registry = "buf", optional = true }
ponix-domain = { path = "../ponix-domain", optional = true }
xid = { version = "1.1", optional = true }

[features]
default = []
# Enable generic protobuf batch processor
protobuf = ["prost"]
# Enable ProcessedEnvelope-specific producer and processor
processed-envelope = ["ponix-proto", "protobuf", "xid", "ponix-domain", "prost-types", "serde_json", "chrono"]
# Enable RawEnvelope-specific producer and processor
raw-envelope = ["ponix-proto", "protobuf", "ponix-domain", "prost-types", "chrono", "xid"]

[dev-dependencies]
mockall = "0.13"
