[package]
name = "ponix-payload"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
cel-interpreter = { workspace = true }
ponix-domain = { path = "../ponix-domain" }
tracing = { workspace = true }
