[package]
name = "ponix-all-in-one"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "ponix_all_in_one"
path = "src/lib.rs"

[[bin]]
name = "ponix-all-in-one"
path = "src/main.rs"

[dependencies]
ponix-runner = { path = "../runner" }
common = { path = "../common" }
ponix_api = { path = "../ponix_api" }
analytics_worker = { path = "../analytics_worker" }
gateway_orchestrator = { path = "../gateway_orchestrator" }
cdc_worker = { path = "../cdc_worker" }
goose = { path = "../goose" }

tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
anyhow.workspace = true
serde.workspace = true
config.workspace = true
prost-types.workspace = true
xid.workspace = true
chrono.workspace = true

# Protobuf (BSR registry - excluded from workspace)
ponix-proto = { package = "ponix_ponix_community_neoeinstein-prost", version = "0.4.0-20251129185957-8f22d4974be0.1", registry = "buf" }

[features]
integration-tests = []

[dev-dependencies]
testcontainers.workspace = true
testcontainers-modules.workspace = true
which.workspace = true
chrono.workspace = true
clickhouse.workspace = true
serde_json.workspace = true
tower.workspace = true
