[package]
name = "ponix_api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
common = { path = "../common" }
tracing.workspace = true
xid.workspace = true
tokio.workspace = true
tokio-util.workspace = true
chrono.workspace = true
tonic.workspace = true
anyhow.workspace = true

ponix-proto-prost.workspace = true
ponix-proto-tonic.workspace = true

[features]
integration-tests = []
