[package]
name = "ponix_api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
common = { path = "../common" }
tracing.workspace = true
xid.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tokio-stream.workspace = true
chrono.workspace = true
tonic.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
bytes.workspace = true
sha2.workspace = true
hex.workspace = true

ponix-proto-prost.workspace = true
ponix-proto-tonic.workspace = true

# Validation
garde = { workspace = true, features = ["email"] }

[dev-dependencies]
common = { path = "../common", features = ["testing"] }

[features]
integration-tests = []
